# ai-orchestration

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_out.txt  test_out_v2.txt  test_out_v3.txt  verify_complete.sh
.github/workflows/: ai-orchestration-trigger.yml  ci.yml  deploy.yml
config/: agents.yaml  projects.yaml
docs/: architecture.md
scripts/: deploy-azure.sh  init-db.sql  local-setup.sh  run_docker.sh  run_local.sh  setup.sh  test.sh
src/: __init__.py
src/agents/: __init__.py  base.py  coder.py  designer.py  planner.py  reviewer.py  tester.py
src/api/: __init__.py  models.py  server.py
src/cli/: __init__.py  init_db.py  orchestrate.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  graph.py  state.py
src/db/: __init__.py  models.py
src/tools/: __init__.py  github.py  github_adapter.py  github_tools.py  mcp_manager.py  perplexity.py  perplexity_mcp.py  test_github.py  test_mcp.py
tests/: __init__.py  conftest.py  test_agents.py  test_tools.py
tests/agents/: test_planner.py
tests/integration/: test_workflow.py
tests/tools/: test_github.py  test_perplexity.py
